# Magnification_Public

./: CFHTLenS__Mag__get__fields_8py.html  CFHTLenS__catalogue__filtering_2is__good__position_8hpp.html  CFHTLenS__catalogue__filtering_2is__good__position_8hpp_source.html  DE_8hpp.html  Eigen_8hpp_source.html  INSTALL  IceBRG__main_8md.html  Makefile  Makefile.am  Makefile.in  README  README.md  README_8md.html  aclocal.m4  annotated.html  ascii__table_8hpp_source.html  astro_8h_source.html  astro__caches_8h.html  astro__caches_8h_source.html  binary__archive_8hpp_source.html  cache_8hpp.html  cache__2d_8hpp.html  cache__3d_8hpp_source.html  cache__4d_8hpp.html  classIceBRG_1_1Fourier_1_1managed__fftw__plan-members.html  classIceBRG_1_1Fourier_1_1managed__fftw__plan.html  classIceBRG_1_1Fourier_1_1radial__vector-members.html  classIceBRG_1_1MCMC__solver.html  classIceBRG_1_1Schechter__like__functor-members.html  classIceBRG_1_1Schechter__like__functor.html  classIceBRG_1_1accel__functor-members.html  classIceBRG_1_1accel__functor.html  classIceBRG_1_1bootstrap.html  classIceBRG_1_1brg__cache.html  classIceBRG_1_1brg__cache__2d.html  classIceBRG_1_1brg__cache__3d-members.html  classIceBRG_1_1brg__cache__4d-members.html  classIceBRG_1_1brg__cache__nd-members.html  classIceBRG_1_1correlation__function__estimator-members.html  classIceBRG_1_1count__fitting__functor-members.html  (+420 more)
docs/: Doxyfile  Doxyfile-gh-pages  Doxyfile.in  IceBRG_lensing.md  IceBRG_main.md  IceBRG_physics.md  Index.dox  Makefile.am  Makefile.in  index.md
docs/html/: CFHTLenS__Mag__get__fields_8py.html  CFHTLenS__catalogue__fetching_2match__to__spec_8py.html  CFHTLenS__catalogue__filtering_2is__good__position_8hpp.html  CFHTLenS__catalogue__filtering_2is__good__position_8hpp_source.html  CFHTLenS__catalogue__filtering_2match__to__spec_8py.html  CFHTLenS__catalogue__filtering_2src_2is__good__position_8hpp.html  CFHTLenS__catalogue__filtering_2src_2is__good__position_8hpp_source.html  CFHTLenS__catalogue__filtering_2src_2match__to__spec_8py.html  CFHTLenS__get__unmasked__fractions_2is__good__position_8hpp.html  CFHTLenS__get__unmasked__fractions_2is__good__position_8hpp_source.html  DE_8hpp.html  DE_8hpp_source.html  Eigen_8hpp.html  Eigen_8hpp_source.html  README_8md.html  ____init_____8py.html  annotated.html  apply__unitconvs_8hpp.html  apply__unitconvs_8hpp_source.html  ascii__table_8hpp.html  ascii__table_8hpp_source.html  ascii__table__map_8hpp.html  ascii__table__map_8hpp_source.html  astro_8cpp.html  astro_8h.html  astro_8h_source.html  astro__caches_8cpp.html  astro__caches_8h.html  astro__caches_8h_source.html  binary__archive_8hpp.html  binary__archive_8hpp_source.html  cache_8hpp.html  cache_8hpp_source.html  cache__2d_8hpp.html  cache__2d_8hpp_source.html  cache__3d_8hpp.html  cache__3d_8hpp_source.html  cache__4d_8hpp.html  cache__4d_8hpp_source.html  cache__nd_8hpp.html  (+751 more)
docs/html/Magnification_Public/: CFHTLenS__Mag__get__masks_8py.html  CFHTLenS__get__unmasked__fractions_2is__good__position_8hpp.html  CFHTLenS__get__unmasked__fractions_2is__good__position_8hpp_source.html  DE_8hpp_source.html  Eigen_8hpp.html  IceBRG__lensing_8md.html  IceBRG__physics_8md.html  ____init_____8py.html  apply__unitconvs_8hpp.html  apply__unitconvs_8hpp_source.html  ascii__table_8hpp.html  ascii__table__map_8hpp.html  ascii__table__map_8hpp_source.html  astro_8cpp.html  astro_8h.html  astro__caches_8cpp.html  binary__archive_8hpp.html  cache_8hpp_source.html  cache__2d_8hpp_source.html  cache__3d_8hpp.html  cache__4d_8hpp_source.html  cache__nd_8hpp.html  cache__nd_8hpp_source.html  call__program_8hpp.html  call__program_8hpp_source.html  classIceBRG_1_1Fourier_1_1fftw__wisdom__accumulator-members.html  classIceBRG_1_1Fourier_1_1fftw__wisdom__accumulator.html  classIceBRG_1_1Fourier_1_1radial__vector.html  classIceBRG_1_1MCMC__solver-members.html  classIceBRG_1_1add__cache-members.html  classIceBRG_1_1add__cache.html  classIceBRG_1_1bootstrap-members.html  classIceBRG_1_1brg__cache-members.html  classIceBRG_1_1brg__cache__2d-members.html  classIceBRG_1_1brg__cache__3d.html  classIceBRG_1_1brg__cache__4d.html  classIceBRG_1_1brg__cache__nd.html  classIceBRG_1_1correlation__function__estimator.html  classIceBRG_1_1dfa__cache-members.html  classIceBRG_1_1element__accessor-members.html  (+410 more)
docs/html/search/: all_5f.js  all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_68.js  all_69.js  all_6a.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_70.js  all_71.js  all_72.js  all_73.js  all_74.js  all_75.js  all_76.js  all_77.js  all_7e.js  classes_5f.js  classes_61.js  classes_62.js  classes_63.js  classes_64.js  classes_66.js  classes_67.js  classes_68.js  classes_69.js  classes_6a.js  classes_6c.js  classes_6d.js  (+86 more)
docs/latex/: CFHTLenS__Mag__get__fields_8py.tex  CFHTLenS__Mag__get__masks_8py.tex  CFHTLenS__catalogue__fetching_2match__to__spec_8py.tex  CFHTLenS__catalogue__filtering_2is__good__position_8hpp.tex  CFHTLenS__catalogue__filtering_2match__to__spec_8py.tex  CFHTLenS__catalogue__filtering_2src_2is__good__position_8hpp.tex  CFHTLenS__catalogue__filtering_2src_2match__to__spec_8py.tex  CFHTLenS__get__unmasked__fractions_2is__good__position_8hpp.tex  DE_8hpp.tex  Eigen_8hpp.tex  IceBRG__lensing_8md.tex  IceBRG__main_8md.tex  IceBRG__physics_8md.tex  README_8md.tex  ____init_____8py.tex  annotated.tex  apply__unitconvs_8hpp.tex  ascii__table_8hpp.tex  ascii__table__map_8hpp.tex  astro_8cpp.tex  astro_8h.tex  astro__caches_8cpp.tex  astro__caches_8h.tex  binary__archive_8hpp.tex  cache_8hpp.tex  cache__2d_8hpp.tex  cache__3d_8hpp.tex  cache__4d_8hpp.tex  cache__nd_8hpp.tex  call__program_8hpp.tex  classIceBRG_1_1Fourier_1_1fftw__wisdom__accumulator.tex  classIceBRG_1_1Fourier_1_1managed__fftw__plan.tex  classIceBRG_1_1Fourier_1_1radial__vector.tex  classIceBRG_1_1MCMC__solver.tex  classIceBRG_1_1Schechter__like__functor.tex  classIceBRG_1_1accel__functor.tex  classIceBRG_1_1add__cache.tex  classIceBRG_1_1bootstrap.tex  classIceBRG_1_1brg__cache.tex  classIceBRG_1_1brg__cache__2d.tex  (+422 more)
(+689 files in other folders)
