bin_SCRIPTS = CFHTLenS_Mag_get_fields.py CFHTLenS_Mag_get_masks.py

nobase_python_PYTHON = CFHTLenS_Mag_fetching_data/fields_lists.py  CFHTLenS_Mag_fetching_data/match_command.py CFHTLenS_Mag_fetching_data/__init__.py      CFHTLenS_Mag_fetching_data/query.py CFHTLenS_Mag_fetching_data/magic_values.py
