AM_CXXFLAGS = @MY_CPPFLAGS@
bin_PROGRAMS = CFHTLenS_Mag_filter_catalogues
CFHTLenS_Mag_filter_catalogues_SOURCES = correct_redshift_bias.cpp  get_filtered_indices.h  make_output_map.cpp correct_redshift_bias.h    is_good_position.hpp    make_output_map.h get_filtered_indices.cpp   main_catalogue_filtering.cpp
LDADD = @MY_LDFLAGS@
