AM_CPPFLAGS = @MY_CPPFLAGS@
AM_CXXFLAGS = @MY_CXXFLAGS@
LDADD = @MY_LDADD@
AM_LDFLAGS = @MY_LDFLAGS@

bin_PROGRAMS = CFHTLenS_Mag_fit_lensing_model
CFHTLenS_Mag_fit_lensing_model_SOURCES = common.h         get_errors_on_fit.hpp    main_lensing_model_fitter.cpp fitting_bin.hpp  lensing_fitting_bin.hpp
