AM_CPPFLAGS = @MY_CPPFLAGS@
AM_CXXFLAGS = @MY_CXXFLAGS@
LDADD = @MY_LDADD@ @MY_LDADD_ICEBRG@
AM_LDFLAGS = @MY_LDFLAGS@

bin_PROGRAMS = CFHTLenS_Mag_get_unmasked_fractions
CFHTLenS_Mag_get_unmasked_fractions_SOURCES = get_good_positions.hpp  load_pixel_table.cpp  main_mask_testing.cpp is_good_position.hpp    load_pixel_table.h
