AM_CPPFLAGS = @MY_CPPFLAGS@
AM_CXXFLAGS = @MY_CXXFLAGS@
LDADD = @MY_LDADD@
AM_LDFLAGS = @MY_LDFLAGS@

bin_PROGRAMS = CFHTLenS_Mag_measure_weak_lensing
CFHTLenS_Mag_measure_weak_lensing_SOURCES = gg_lensing_config.cpp  main_gg_lensing.cpp         pass_configs_to_binner.h gg_lensing_config.h    pass_configs_to_binner.cpp
