AM_CPPFLAGS = @MY_CPPFLAGS@
if mypj_install_icebrg
lib_LIBRARIES = libIceBRG_lensing.a
else
noinst_LIBRARIES = libIceBRG_lensing.a
endif
libIceBRG_lensing_a_SOURCES = pair_bins_summary.cpp lensing_tNFW_caches.cpp pair_bin_summary.cpp lensing_tNFW_profile.cpp source_galaxy.cpp lens_source_pair.cpp pair_bin.cpp pair_binner.cpp magnification/expected_count_cache.cpp magnification/expected_count_derivative_cache.cpp magnification/expected_count_fit_loader.cpp magnification/expected_count_loader.cpp magnification/mag_calibration_cache.cpp magnification/mag_calibration_loader.cpp magnification/mag_correlation_function_estimator.cpp magnification/magnification_alpha.cpp magnification/magnification_functors.cpp magnification/mag_signal_integral_cache.cpp magnification/mag_weight_integral_cache.cpp magnification/Schechter_like_functor.cpp shifting/shifting_cache.cpp shifting/shifting_loader.cpp 
