AM_CPPFLAGS = @MY_CPPFLAGS@
AM_CXXFLAGS = @MY_LIBCXXFLAGS@

AM_LDFLAGS = @MY_LDFLAGS@
AM_LIBFLAGS = @MY_LDFLAGS@

if mypj_install_icebrg
lib_LTLIBRARIES = libIceBRG_lensing.la
myincludedir = $(pkgincludedir)/IceBRG_lensing
nobase_myinclude_HEADERS = lensing_profile_extension_functors.hpp pair_bins_summary.h lensing_profile_extension.hpp pair_bin_summary.h lensing_tNFW_caches.h source_galaxy.h lensing_tNFW_profile.h source_obj.hpp lens_source_pair.h two_halo_term_functions.hpp pair_bin.h two_halo_term_methods.hpp pair_binner.h magnification/count_fitting_results.hpp magnification/expected_count_cache.h magnification/expected_count_derivative_cache.h magnification/expected_count_fit_loader.h magnification/expected_count_loader.h magnification/mag_calibration_cache.h magnification/mag_calibration_loader.h magnification/mag_correlation_function_estimator.h magnification/mag_global_values.h magnification/magnification_alpha.h magnification/magnification_functors.h magnification/mag_signal_integral_cache.h magnification/mag_weight_integral_cache.h magnification/Schechter_like_functor.h shifting/corr_alpha.hpp shifting/shifting_cache.h shifting/shifting_loader.h
else
noinst_LTLIBRARIES = libIceBRG_lensing.la
noinst_HEADERS = lensing_profile_extension_functors.hpp pair_bins_summary.h lensing_profile_extension.hpp pair_bin_summary.h lensing_tNFW_caches.h source_galaxy.h lensing_tNFW_profile.h source_obj.hpp lens_source_pair.h two_halo_term_functions.hpp pair_bin.h two_halo_term_methods.hpp pair_binner.h magnification/count_fitting_results.hpp magnification/expected_count_cache.h magnification/expected_count_derivative_cache.h magnification/expected_count_fit_loader.h magnification/expected_count_loader.h magnification/mag_calibration_cache.h magnification/mag_calibration_loader.h magnification/mag_correlation_function_estimator.h magnification/mag_global_values.h magnification/magnification_alpha.h magnification/magnification_functors.h magnification/mag_signal_integral_cache.h magnification/mag_weight_integral_cache.h magnification/Schechter_like_functor.h shifting/corr_alpha.hpp shifting/shifting_cache.h shifting/shifting_loader.h
endif
libIceBRG_lensing_la_SOURCES = pair_bins_summary.cpp lensing_tNFW_caches.cpp pair_bin_summary.cpp lensing_tNFW_profile.cpp source_galaxy.cpp lens_source_pair.cpp pair_bin.cpp pair_binner.cpp magnification/expected_count_cache.cpp magnification/expected_count_derivative_cache.cpp magnification/expected_count_fit_loader.cpp magnification/expected_count_loader.cpp magnification/mag_calibration_cache.cpp magnification/mag_calibration_loader.cpp magnification/mag_correlation_function_estimator.cpp magnification/magnification_alpha.cpp magnification/magnification_functors.cpp magnification/mag_signal_integral_cache.cpp magnification/mag_weight_integral_cache.cpp magnification/Schechter_like_functor.cpp shifting/shifting_cache.cpp shifting/shifting_loader.cpp
libIceBRG_lensing_la_LIBADD = @MY_LDADD@ -lIceBRG_physics -lIceBRG_main 
