AM_CPPFLAGS = @MY_CPPFLAGS@
if mypj_install_icebrg
lib_LIBRARIES = libIceBRG_main.a
else
noinst_LIBRARIES = libIceBRG_main.a
endif
libIceBRG_main_a_SOURCES = error_handling.cpp external/sgsmooth.cpp vector/limit_vector_operations.hpp external/tk_spline.cpp math/interpolator/interpolator.cpp math/interpolator/interpolator_derivative.cpp math/random/random_functions.cpp
