AM_CPPFLAGS = @MY_CPPFLAGS@
if mypj_install_icebrg
lib_LIBRARIES = libIceBRG_physics.a
else
noinst_LIBRARIES = libIceBRG_physics.a
endif
libIceBRG_physics_a_SOURCES = astro_caches.cpp lensing_correlation_function_estimator.cpp astro.cpp correlation_function_estimator.cpp density_profile/density_profile.cpp density_profile/density_profile_functors.cpp density_profile/point_mass_profile.cpp density_profile/tNFW_profile.cpp sky_obj/galaxy.cpp sky_obj/galaxy_group.cpp sky_obj/position_grid_cache.cpp sky_obj/sky_obj.cpp sky_obj_with_density_profile/tNFW_galaxy.cpp
